--- a/exercise1.html
+++ b/exercise1.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>This is an HTML canvas</title>
+        <style media="screen">
+            body{
+                text-align: center;
+                font-family: sans-serif;                
+            }
+            canvas{
+                background-color: black;
+            }            
+        </style>
     </head>
     <body>
         <h1>This is an HTML canvas</h1>
@@ -9,10 +18,12 @@
         <script>
             var canvas = document.getElementById("asteroids");
             var context = canvas.getContext("2d");
-            context.strokeStyle = 'dimgrey';
+            context.strokeStyle = 'lightgrey';
+            context.fillStyle = 'dimgrey';
             context.lineWidth = 5;
             context.rect(75, 75, 250, 250);
             context.stroke();
+            context.fill();
             // this is a comment, it has no effect!!!
            </script>
     </body>
