--- a/exercise1.html
+++ b/exercise1.html
@@ -21,10 +21,17 @@
             context.strokeStyle = 'lightgrey';
             context.fillStyle = 'dimgrey';
             context.lineWidth = 5;
-            context.rect(75, 75, 250, 250);
+            context.rect(75, 50, canvas.width-150, canvas.height-100);
             context.stroke();
             context.fill();
-            // this is a comment, it has no effect!!!
+            context.font = "34px Arial";
+            context.strokeStyle = '#FF2222';
+            context.fillStyle = '#FFAAAA';
+            context.lineWidth = 0.75;
+            context.textAlign="center";
+            let msg = "2D Drawing"
+            context.fillText(msg, canvas.width / 2, 100);
+            context.strokeText(msg, canvas.width / 2, 100);
            </script>
     </body>
 </html>
