--- a/exercise1.html
+++ b/exercise1.html
@@ -32,6 +32,23 @@
             let msg = "2D Drawing"
             context.fillText(msg, canvas.width / 2, 100);
             context.strokeText(msg, canvas.width / 2, 100);
+            context.strokeStyle = '#FFFFFF';
+            context.lineWidth = 2;
+            context.beginPath();
+            context.arc(200, 140, 20, 0, Math.PI * 2);
+            context.moveTo(200, 160);
+            context.lineTo(200, 220);
+            context.moveTo(180, 300);
+            context.lineTo(185, 260);
+            context.lineTo(200, 220);
+            context.lineTo(215, 260);
+            context.lineTo(220, 300);
+            context.moveTo(240, 130);
+            context.lineTo(225, 170);
+            context.lineTo(200, 170);
+            context.lineTo(175, 180);
+            context.lineTo(170, 220);
+            context.stroke();
            </script>
     </body>
 </html>
